# deonlinevormgever-crewai

./: README.md  pyproject.toml
src/deonlinevormgever/: crew.py  main.py
src/deonlinevormgever/config/: agents.yaml  tasks.yaml
src/deonlinevormgever/tools/: brankbook_tool.py  custom_tool.py  design_tool.py  prompt_tool.py  style_tool.py  tone_tool.py
